corrected the overlap
corrected the overlap between "sidebar" button and "combinational logic" link

--- a/_sass/navigation.scss
+++ b/_sass/navigation.scss
@@ -134,7 +134,7 @@
 }
 
 .breadcrumb-nav-list {
-  padding-left: 0;
+  padding-left: 100px;
   margin-bottom: $sp-3;
   list-style: none;
 }
